# sob

./: .editorconfig  .flake8  .gitignore  .markdownlint.yaml  404.html  CNAME  LICENSE  Makefile  README.md  clean.py  conda_distribute.py  distribute.py  index.html  mkdocs.yaml  mypy.ini  objects.inv  pypi_distribute.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: distribute.yml  python-publish.yml  test-distribute.yml  test.yml
api/abc/: index.html
api/errors/: index.html
api/hooks/: index.html
api/meta/: index.html
api/model/: index.html
api/properties/: index.html
api/thesaurus/: index.html
api/types/: index.html
api/utilities/: index.html
api/version/: index.html
contributing/: index.html
docs/: contributing.md  index.md
scripts/: clean.py  distribute.py  update_readme.py  update_setup_requirements.py
search/: search_index.json
sob/: __init__.py  abc.py  errors.py  hooks.py  meta.py  model.py  properties.py  request.py  test.py  thesaurus.py  types.py  version.py  warnings.py
sob.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sob/abc/: __init__.py  meta.py  model.py  properties.py  types.py  version.py
sob/properties/: __init__.py  types.py
sob/utilities/: __init__.py  assertion.py  compatibility.py  datetime.py  inspect.py  io.py  string.py  types.py  typing.py
src/sob/: __init__.py  _datetime.py  _inspect.py  _io.py  _types.py  abc.py  (+12 more)
tests/: __init__.py  _test_sob.py  test_datetime.py  test_io.py  test_meta_version.py  test_model.py  test_sob.py  test_thesaurus.py  test_types.py  test_utilities.py  test_version.py  utilities.py
(+19 files in other folders)
