[metadata]
name = sob
version = 1.50.0
author_email = david@belais.me
description = A type-enforced framework for serializing and deserializing JSON
long_description = file: README.md
long_description_content_type = text/markdown
keywords = serial
license = MIT
url = https://github.com/enorganic/sob

[options]
python_requires = ~=3.7
packages = find:
include_package_data = True
install_requires =
	pyyaml>2
	iso8601~=1.1
	more-itertools~=9.0

[options.data_files]
sob =
	sob/py.typed
sob/utilities =
	sob/utilities/py.typed
