[metadata]
name = sob
version = 1.50.6
author_email = david@belais.me
description = A type-enforced framework for serializing and deserializing JSON
long_description = file: README.md
long_description_content_type = text/markdown
keywords = serial
license = MIT
url = https://github.com/enorganic/sob

[options]
python_requires = ~=3.7
packages = find:
include_package_data = True
install_requires =
	pyyaml>2
	iso8601~=2.0
	more-itertools<10.0,>=9.1

[options.package_data]
* = py.typed
